--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -5,6 +5,11 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
+      <th>City origin</th>
+      <th>City destination</th>
+      <th>Bus class</th>
+      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +17,11 @@
   <tbody>
     <% @alerts.each do |alert| %>
       <tr>
+        <td><%= alert.name %></td>
+        <td><%= alert.city_origin %></td>
+        <td><%= alert.city_destination %></td>
+        <td><%= alert.bus_class %></td>
+        <td><%= alert.price %></td>
         <td><%= link_to 'Show', alert %></td>
         <td><%= link_to 'Edit', edit_alert_path(alert) %></td>
         <td><%= link_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' } %></td>
