--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -1,4 +1,29 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>Name:</strong>
+  <%= @alert.name %>
+</p>
+
+<p>
+  <strong>City origin:</strong>
+  <%= @alert.city_origin %>
+</p>
+
+<p>
+  <strong>City destination:</strong>
+  <%= @alert.city_destination %>
+</p>
+
+<p>
+  <strong>Bus class:</strong>
+  <%= @alert.bus_class %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @alert.price %>
+</p>
+
 <%= link_to 'Edit', edit_alert_path(@alert) %> |
 <%= link_to 'Back', alerts_path %>
