--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -5,8 +5,8 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :city_origin %>
-    <%= f.input :city_destination %>
+    <%= f.input :city_origin, collection: @cities, include_blank: false %>
+    <%= f.input :city_destination, collection: @cities, include_blank: false %>
     <%= f.input :bus_class, collection: Alert.bus_classes.keys, include_blank: false %>
     <%= f.input :price %>
   </div>
