adding jquery and js

--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>City origin:</strong>
-  <%= @alert.city_origin %>
+  <%= @alert.city_origin_name %>
 </p>
 
 <p>
   <strong>City destination:</strong>
-  <%= @alert.city_destination %>
+  <%= @alert.city_destination_name %>
 </p>
 
 <p>
