--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -5,8 +5,12 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :city_origin, collection: @cities, include_blank: false %>
-    <%= f.input :city_destination, collection: @cities, include_blank: false %>
+    <%= f.input :city_origin_id, collection: @cities, include_blank: false %>
+    <%= f.hidden_field :city_origin_name %>
+    <%= f.hidden_field :city_origin_url_name %>
+    <%= f.input :city_destination_id, collection: @cities, include_blank: false %>
+    <%= f.hidden_field :city_destination_name %>
+    <%= f.hidden_field :city_destination_url_name %>
     <%= f.input :bus_class, collection: Alert.bus_classes.keys, include_blank: false %>
     <%= f.input :price %>
   </div>
