--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -18,8 +18,8 @@
     <% @alerts.each do |alert| %>
       <tr>
         <td><%= alert.name %></td>
-        <td><%= alert.city_origin %></td>
-        <td><%= alert.city_destination %></td>
+        <td><%= alert.city_origin_name %></td>
+        <td><%= alert.city_destination_name %></td>
         <td><%= alert.bus_class %></td>
         <td><%= alert.price %></td>
         <td><%= link_to 'Show', alert %></td>
