--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -25,5 +25,31 @@
   <%= @alert.price %>
 </p>
 
+<table>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Schedule</th>
+      <th>Class</th>
+      <th>Minimum price</th>
+      <th>Enterprise</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @search_results.each do |search_result| %>
+      <tr>
+        <td><%= l(search_result[:departure_time].to_date) %></td>
+        <td><%= l(search_result[:departure_time].to_time, format: :only_time) %></td>
+        <td><%= search_result[:seat_klass] %></td>
+        <td><%= search_result[:price] %></td>
+        <td><%= search_result[:bus_operator_name] %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
 <%= link_to 'Edit', edit_alert_path(@alert) %> |
 <%= link_to 'Back', alerts_path %>
