adding link to table

--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -13,6 +13,6 @@
 
   $('#alert_city_destination_id').on('change', function(e) {
       $('#alert_city_destination_name').val($('#alert_city_destination_id').find(":selected").text())
-      $('#alert_city_destination_url_name').val($('#alert_city_origin_id').find(":selected").attr('url_name'))
+      $('#alert_city_destination_url_name').val($('#alert_city_destination_id').find(":selected").attr('url_name'))
   });
 </script>
