--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -50,6 +50,8 @@
   </tbody>
 </table>
 
+<%= line_chart @graph, thousands: '.', height: '400px', discrete: true, xtitle: "Fecha", ytitle: "Precio" %>
+
 
 <%= link_to 'Edit', edit_alert_path(@alert) %> |
 <%= link_to 'Back', alerts_path %>
