--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'form', alert: @alert %>
 
-<%= link_to 'Back', alerts_path %>
+<%= link_to 'Atrás', alerts_path %>
 
 <script>
   $('#alert_city_origin_id').on('change', function(e) {
