--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -3,19 +3,53 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :city_origin_id, collection: @cities, include_blank: false %>
-    <%= f.hidden_field :city_origin_name %>
-    <%= f.hidden_field :city_origin_url_name %>
-    <%= f.input :city_destination_id, collection: @cities, include_blank: false %>
-    <%= f.hidden_field :city_destination_name %>
-    <%= f.hidden_field :city_destination_url_name %>
-    <%= f.input :bus_class, collection: Alert.bus_classes.keys, include_blank: false %>
-    <%= f.input :price %>
+  <div class="row">
+    <div class="form-inputs">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= f.input :name %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= f.input :city_origin_id, collection: @cities, include_blank: false, input_html: { class: "form-select" } %>
+            <%= f.hidden_field :city_origin_name %>
+            <%= f.hidden_field :city_origin_url_name %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= f.input :city_destination_id, collection: @cities, include_blank: false, input_html: { class: "form-select" } %>
+            <%= f.hidden_field :city_destination_name %>
+            <%= f.hidden_field :city_destination_url_name %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= f.input :bus_class, collection: Alert.bus_classes.keys, include_blank: false, input_html: { class: "form-select" } %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <%= f.input :price %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row pt-2">
+    <div class="form-actions">
+      <%= f.button :submit, class: "btn btn-primary" %>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
 <% end %>
